--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
     <meta content="Website for Cher, senior software engineer." property="og:description">
     <meta content="summary" name="twitter:card">
     <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta property="og:image" content="https://cher.dev/card.png">
+    <meta name="twitter:site" content="@cherthedev">
+    <meta name="twitter:card" content="summary_large_image">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
