--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta content="Cher 👩‍💻🔥 Principal Software Engineer" property="og:title">
-    <meta content="Website for Cher, senior software engineer." property="og:description">
+    <meta content="Website for Cher, Principal software engineer and hot sauce maker." property="og:description">
+    <meta content="Website for Cher, Principal software engineer and hot sauce maker." property="twitter:description">
     <meta content="summary" name="twitter:card">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <meta property="og:image" content="https://cher.dev/card.png">
+    <meta property="twitter:image" content="https://cher.dev/card.png">
     <meta name="twitter:site" content="@cherthedev">
     <meta name="twitter:card" content="summary_large_image">
     <!--
