--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
     <meta content="Website for Cher, Principal software engineer and hot sauce maker." property="twitter:description">
     <meta content="summary" name="twitter:card">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <meta property="og:image" content="https://cher.dev/card.png">
-    <meta property="twitter:image" content="https://cher.dev/card.png">
+    <meta property="og:image" content="https://cherscarlett.github.io/assets/card.png">
+    <meta property="twitter:image" content="https://cherscarlett.github.io/assets/card.png">
     <meta name="twitter:site" content="@cherthedev">
     <meta name="twitter:card" content="summary_large_image">
     <!--
